@@ -1,5 +1,9 @@
 2007-03-14 9:15  nick
 
+	* plugins/tasklist/tasklist.c: Fix previous commit
+
+2007-03-14 9:15  nick
+
 	*libxfce4panel/Makefile.am: Try to fix bug 3002.
 
 2007-03-14 8:38   nick
